--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,3 +38,20 @@ main {
     margin-left: 20px;
     background-color: white;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
